--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h2>👋 About Me</h2>
       <img src="profile.jpg" alt="Nishchal Profile" class="profile-img" />
       <p>
-        I'm Nishchal — a developer who enjoys crafting clean, user-friendly interfaces and building meaningful digital experiences. Passionate about React, Node.js, and learning something new every day.
+        I'm NIkhil — a developer who enjoys crafting clean, user-friendly interfaces and building meaningful digital experiences. Passionate about React, Node.js, and learning something new every day.
       </p>
     </section>
 
