--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header class="main-header">
-    <h1>Nishchal Sachan</h1>
+    <h1>Nikhil Gupta</h1>
     <p class="tagline">Web Developer • Full Stack Learner • Tech Explorer</p>
   </header>
 
@@ -17,7 +16,7 @@
     <!-- About Me Section -->
     <section class="section about" id="about">
       <h2>👋 About Me</h2>
-      <img src="profile.jpg" alt="Nishchal Profile" class="profile-img" />
+      <img src="profile.jpg" alt="Nikhil Gupta" class="profile-img" />
       <p>
         I'm NIkhil — a developer who enjoys crafting clean, user-friendly interfaces and building meaningful digital experiences. Passionate about React, Node.js, and learning something new every day.
       </p>
@@ -57,12 +56,12 @@
     <!-- Contact Section -->
     <section class="section contact" id="contact">
       <h2>📬 Get In Touch</h2>
-      <p>Email: sachannishchal@gmail.com</p>
+      <p>Email: nkgt9170413117@gmail.com</p>
     </section>
   </main>
 
   <footer class="main-footer">
-    <p>© 2025 Nishchal Sachan • Built with love & 💻</p>
+    <p>© 2025 Nikhil Gupta • Built with love & 💻</p>
   </footer>
 
 </body>
